--- a/site.html
+++ b/site.html
@@ -43,8 +43,44 @@
                     <img src="img/info1.svg" alt=""><span class="infoLine__item">iceland</span>
                 </div>
             </div>
-
         </div>
+
+        <div class="areas">
+            <div class="container">
+                <div class="areas__title">What we do.</div>
+                <div class="areas__subtitle">The areas that we're specialized in.</div>
+                
+                <div class="areas__grid">
+
+                    <div class="grid__column grid__column_img1">
+                        <div class="grid__column__title">Product Photography</div>
+                        <div class="grid__column__text">Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</div>
+                        <div class="grid__column__btn"><span>Read more</span></div>
+                    </div>
+
+                    <div class="grid__column grid__column_img2">
+                        <div class="grid__column__title">Architecture Photography</div>
+                        <div class="grid__column__text">Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</div>
+                        <div class="grid__column__btn"><span>Read more</span></div>
+                    </div>
+
+                    <div class="grid__column grid__column_img3">
+                        <div class="grid__column__title">Drone Photography</div>
+                        <div class="grid__column__text">Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</div>
+                        <div class="grid__column__btn"><span>Read more</span></div>
+                    </div>
+
+                    <div class="grid__column grid__column_img4">
+                        <div class="grid__column__title">Wildlife Photography</div>
+                        <div class="grid__column__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</div>
+                        <div class="grid__column__btn"><span>Read more</span></div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
     </div>
 </body>
 
