--- a/site.html
+++ b/site.html
@@ -27,7 +27,7 @@
         </header>
         <div class="mainblock">
             <div class="mainblock__content">
-                <div class="mainblock__subtitle">Photographer & Filmmaker</div>
+                <div class="mainblock__subtitle uppercase">Photographer & Filmmaker</div>
                 <div class="mainblock__title">Aperture Studios</div>
                 <div class="mainblock__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
                     enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
@@ -48,38 +48,116 @@
         <div class="areas">
             <div class="container">
                 <div class="areas__title">What we do.</div>
-                <div class="areas__subtitle">The areas that we're specialized in.</div>
-                
+                <div class="areas__subtitle gray">The areas that we're specialized in.</div>
+
                 <div class="areas__grid">
 
                     <div class="grid__column grid__column_img1">
                         <div class="grid__column__title">Product Photography</div>
-                        <div class="grid__column__text">Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</div>
-                        <div class="grid__column__btn"><span>Read more</span></div>
+                        <div class="grid__column__text">Cras commodo consequat orci, in convallis risus egestas non.
+                            Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.
+                        </div>
+                        <div class="whiteBtn"><span>Read more</span></div>
                     </div>
 
                     <div class="grid__column grid__column_img2">
                         <div class="grid__column__title">Architecture Photography</div>
-                        <div class="grid__column__text">Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</div>
-                        <div class="grid__column__btn"><span>Read more</span></div>
+                        <div class="grid__column__text">Aenean porta neque eget consequat fringilla. Vestibulum
+                            ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec
+                            purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</div>
+                        <div class="whiteBtn"><span>Read more</span></div>
                     </div>
 
                     <div class="grid__column grid__column_img3">
                         <div class="grid__column__title">Drone Photography</div>
-                        <div class="grid__column__text">Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</div>
-                        <div class="grid__column__btn"><span>Read more</span></div>
+                        <div class="grid__column__text">Mauris euismod elit et nisi ultrices, ut faucibus orci
+                            tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis
+                            risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero
+                            ac, cursus quam.</div>
+                        <div class="whiteBtn"><span>Read more</span></div>
                     </div>
 
                     <div class="grid__column grid__column_img4">
-                        <div class="grid__column__title">Wildlife Photography</div>
-                        <div class="grid__column__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</div>
-                        <div class="grid__column__btn"><span>Read more</span></div>
+                        <div class="grid__column__title uppercase">Wildlife Photography</div>
+                        <div class="grid__column__text gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nullam
+                            scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi
+                            neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna
+                            turpis.</div>
+                        <div class="whiteBtn"><span>Read more</span></div>
                     </div>
 
                 </div>
 
             </div>
         </div>
+
+        <div class="mountain">
+            <div class="text-move">
+                <div class="text-move__position">
+                    <span class="text-move__title uppercase">Sunset at Mount Fuji</span>
+                    <p class="text-move__subtitle gray">Duis tristique sed lorem a vestibulum. Cras commodo consequat
+                        orci,
+                        in convallis risus egestas non.</p>
+                </div>
+            </div>
+
+            <div class="infoLine">
+                <div class="infoLine__content">
+                    <img src="img/info4.svg" alt=""><span class="infoLine__item">1/2000s</span>
+                    <img src="img/info3.svg" alt=""><span class="infoLine__item">f/11</span>
+                    <img src="img/info2.svg" alt=""><span class="infoLine__item">100</span>
+                    <img src="img/info1.svg" alt=""><span class="infoLine__item">iceland</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="tools">
+            <div class="tools__leftPart">
+                <div class="tools__leftPart__subtitle uppercase gray">The Gear cage</div>
+                <div class="tools__leftPart__title">The tools that we use.</div>
+                <div class="tools__leftPart__text">
+                    <p>The say that "no place is boring if you've had a good night's sleep and have a pocket full of
+                        unexposed film". While we don't shoot (a lot) of film these days — these are the tools that we
+                        actually use everyday to capture the amazing things around us.</p>
+                </div>
+                <div class="whiteBtn"><span>Check it out</span></div>
+            </div>
+
+            <div class="tools__rightPart">
+
+                <div class="infoLine">
+                    <div class="infoLine__content">
+                        <img src="img/info4.svg" alt=""><span class="infoLine__item">1/2000s</span>
+                        <img src="img/info3.svg" alt=""><span class="infoLine__item">f/11</span>
+                        <img src="img/info2.svg" alt=""><span class="infoLine__item">100</span>
+                        <img src="img/info1.svg" alt=""><span class="infoLine__item">iceland</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="monstera">
+            <div class="text-move">
+                <div class="text-move__position">
+                    <span class="text-move__title uppercase">Sunset at Mount Fuji</span>
+                    <p class="text-move__subtitle gray">Duis tristique sed lorem a vestibulum. Cras commodo consequat
+                        orci,
+                        in convallis risus egestas non.</p>
+                </div>
+            </div>
+
+            <div class="infoLine">
+                <div class="infoLine__content">
+                    <img src="img/info4.svg" alt=""><span class="infoLine__item">1/2000s</span>
+                    <img src="img/info3.svg" alt=""><span class="infoLine__item">f/11</span>
+                    <img src="img/info2.svg" alt=""><span class="infoLine__item">100</span>
+                    <img src="img/info1.svg" alt=""><span class="infoLine__item">iceland</span>
+                </div>
+            </div>
+        </div>
+
 
     </div>
 </body>
