Do blocks: "clients", "star", "connection" + start "footer"

--- a/site.html
+++ b/site.html
@@ -47,7 +47,7 @@
 
         <div class="areas">
             <div class="container">
-                <div class="areas__title">What we do.</div>
+                <div class="areas__title title">What we do.</div>
                 <div class="areas__subtitle gray">The areas that we're specialized in.</div>
 
                 <div class="areas__grid">
@@ -104,10 +104,10 @@
 
             <div class="infoLine">
                 <div class="infoLine__content">
-                    <img src="img/info4.svg" alt=""><span class="infoLine__item">1/2000s</span>
-                    <img src="img/info3.svg" alt=""><span class="infoLine__item">f/11</span>
-                    <img src="img/info2.svg" alt=""><span class="infoLine__item">100</span>
-                    <img src="img/info1.svg" alt=""><span class="infoLine__item">iceland</span>
+                    <img src="img/info4.svg" alt=""><span class="infoLine__item">1"</span>
+                    <img src="img/info3.svg" alt=""><span class="infoLine__item">f/16</span>
+                    <img src="img/info2.svg" alt=""><span class="infoLine__item">400</span>
+                    <img src="img/info1.svg" alt=""><span class="infoLine__item">Japan</span>
                 </div>
             </div>
         </div>
@@ -128,10 +128,10 @@
 
                 <div class="infoLine">
                     <div class="infoLine__content">
-                        <img src="img/info4.svg" alt=""><span class="infoLine__item">1/2000s</span>
-                        <img src="img/info3.svg" alt=""><span class="infoLine__item">f/11</span>
+                        <img src="img/info4.svg" alt=""><span class="infoLine__item">0,8"</span>
+                        <img src="img/info3.svg" alt=""><span class="infoLine__item">f/5,6</span>
                         <img src="img/info2.svg" alt=""><span class="infoLine__item">100</span>
-                        <img src="img/info1.svg" alt=""><span class="infoLine__item">iceland</span>
+                        <img src="img/info1.svg" alt=""><span class="infoLine__item">Sweden</span>
                     </div>
                 </div>
             </div>
@@ -142,22 +142,103 @@
             <div class="text-move">
                 <div class="text-move__position">
                     <span class="text-move__title uppercase">Sunset at Mount Fuji</span>
-                    <p class="text-move__subtitle gray">Duis tristique sed lorem a vestibulum. Cras commodo consequat
-                        orci,
-                        in convallis risus egestas non.</p>
+                    <p class="text-move__subtitle gray">Duis tristique sed lorem a vestibulum. Cras commodo
+                        consequatorci,in convallis risus egestas non.</p>
                 </div>
             </div>
 
             <div class="infoLine">
                 <div class="infoLine__content">
-                    <img src="img/info4.svg" alt=""><span class="infoLine__item">1/2000s</span>
-                    <img src="img/info3.svg" alt=""><span class="infoLine__item">f/11</span>
+                    <img src="img/info4.svg" alt=""><span class="infoLine__item">1/400s</span>
+                    <img src="img/info3.svg" alt=""><span class="infoLine__item">f/3,5</span>
                     <img src="img/info2.svg" alt=""><span class="infoLine__item">100</span>
-                    <img src="img/info1.svg" alt=""><span class="infoLine__item">iceland</span>
+                    <img src="img/info1.svg" alt=""><span class="infoLine__item">Costa Rica</span>
                 </div>
             </div>
         </div>
 
+        <div class="clients">
+            <div class="container">
+                <div class="clients__title title">Past clients</div>
+                <div class="clients__subtitle gray">Trusted by your favourite companies</div>
+                <div class="clients__track">
+                    <div class="client__item"><img src="img/clients1.svg"></div>
+                    <div class="client__item"><img src="img/clients2.svg"></div>
+                    <div class="client__item"><img src="img/clients3.svg"></div>
+                    <div class="client__item"><img src="img/clients4.svg"></div>
+                    <div class="client__item"><img src="img/clients5.svg"></div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="star">
+            <div class="text-move">
+                <div class="text-move__position">
+                    <span class="text-move__title uppercase">Star fall in the Himalayas</span>
+                    <p class="text-move__subtitle gray">Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex,
+                        condimentum dapibus congue et, vulputate ut ligula.</p>
+                </div>
+            </div>
+
+            <div class="infoLine">
+                <div class="infoLine__content">
+                    <img src="img/info4.svg" alt=""><span class="infoLine__item">6"</span>
+                    <img src="img/info3.svg" alt=""><span class="infoLine__item">f/11</span>
+                    <img src="img/info2.svg" alt=""><span class="infoLine__item">800</span>
+                    <img src="img/info1.svg" alt=""><span class="infoLine__item">Nepal</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="connection">
+            <div class="container">
+                <div class="connection__title title">Need help with photography or videography?</div>
+                <div class="connection__subtitle gray">We're here for you!</div>
+                <div class="whiteBtn"><span>Get in touch</span></div>
+            </div>
+        </div>
+
+
+        <footer>
+            <div class="footer__grid">
+                <div class="container">
+                    <div class="footer__grid-rowOne">
+                        <div class="footer__logo">
+                            <img src="img/logo.svg" alt="">
+                            <p class="gray">Photographers & videographers capturing the world around us.</p>
+                        </div>
+                        <div class="footer__links">
+                            <div class="footer__links-areas">
+                                <div class="footer__links-areas__title gray uppercase">Business areas</div>
+                                <ul>
+                                    <li><a href="">Product Photography</a></li>
+                                    <li><a href="">Architecture Photography</a></li>
+                                    <li><a href="">Drone Photography</a></li>
+                                    <li><a href="">Wildlife Photography</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="footer__links-pages">
+                                <div class="footer__links-areas__title gray uppercase">Pages</div>
+                                <ul>
+                                    <li><a href="">Gear cage</a></li>
+                                    <li><a href="">Featured images</a></li>
+                                    <li><a href="">Contact</a></li>
+                                    <li><a href="">Style guide</a></li>
+                                    <li><a href="">Instructions</a></li>
+                                    <li><a href="">Changelog</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="footer__grid-rowTwo">f</div>
+                    <div class="footer__grid-rowThree">f</div>
+
+                </div>
+            </div>
+        </footer>
 
     </div>
 </body>
