The end of the do base + burger, adaptive

--- a/site.html
+++ b/site.html
@@ -12,8 +12,9 @@
     <div class="wrapper">
 
         <header>
+            <div class="container">
             <div class="header__content">
-                <img src="img/logo.svg" alt="">
+                <div class="header__logo"><img src="img/logo.svg" alt=""></div>
                 <nav class="header__list">
                     <ul>
                         <li><a href="#">Business areas</a></li>
@@ -23,8 +24,14 @@
                         <li><a href="#"><span class="header__link_btn">Get template</span></a></li>
                     </ul>
                 </nav>
+
+                <div class="header__burger">
+                    <span></span>
+                </div>
             </div>
+        </div>
         </header>
+
         <div class="mainblock">
             <div class="mainblock__content">
                 <div class="mainblock__subtitle uppercase">Photographer & Filmmaker</div>
@@ -53,7 +60,7 @@
                 <div class="areas__grid">
 
                     <div class="grid__column grid__column_img1">
-                        <div class="grid__column__title">Product Photography</div>
+                        <div class="grid__column__title uppercase">Product Photography</div>
                         <div class="grid__column__text">Cras commodo consequat orci, in convallis risus egestas non.
                             Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.
                         </div>
@@ -61,7 +68,7 @@
                     </div>
 
                     <div class="grid__column grid__column_img2">
-                        <div class="grid__column__title">Architecture Photography</div>
+                        <div class="grid__column__title uppercase">Architecture Photography</div>
                         <div class="grid__column__text">Aenean porta neque eget consequat fringilla. Vestibulum
                             ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec
                             purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</div>
@@ -69,7 +76,7 @@
                     </div>
 
                     <div class="grid__column grid__column_img3">
-                        <div class="grid__column__title">Drone Photography</div>
+                        <div class="grid__column__title uppercase">Drone Photography</div>
                         <div class="grid__column__text">Mauris euismod elit et nisi ultrices, ut faucibus orci
                             tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis
                             risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero
@@ -91,7 +98,7 @@
 
             </div>
         </div>
-
+<!--
         <div class="mountain">
             <div class="text-move">
                 <div class="text-move__position">
@@ -233,14 +240,27 @@
                         </div>
                     </div>
 
-                    <div class="footer__grid-rowTwo">f</div>
-                    <div class="footer__grid-rowThree">f</div>
+                    <div class="footer__grid-rowTwo">
+                        <div class="footer__newsletter">
+                        <div class="footer__newsletter-title uppercase">Subscribe to our newsletter</div>
+                        <div class="footer__newsletter-subtitle gray">Read about all the things we do.</div>
+                    </div>
+                        <div class="whiteBtn bigBtn"><span></span></div>
+                    </div>
+                    <div class="footer__grid-rowThree">
+                        <div class="footer__info">2023</div>
+                        <div class="footer__social-networks">
+                            <a href="#"><img src="img/twitter.svg" alt="twitter"></a>
+                            <a href="#"><img src="img/instagram.svg" alt="instagram"></a>
+                            <a href="#"><img src="img/facebook.svg" alt="facebook"></a>
+                        </div>
+                    </div>
 
                 </div>
             </div>
-        </footer>
-
+        </footer>   -->
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
