end of work with adaptive

--- a/site.html
+++ b/site.html
@@ -13,23 +13,23 @@
 
         <header>
             <div class="container">
-            <div class="header__content">
-                <div class="header__logo"><img src="img/logo.svg" alt=""></div>
-                <nav class="header__list">
-                    <ul>
-                        <li><a href="#">Business areas</a></li>
-                        <li><a href="#">Featured images</a></li>
-                        <li><a href="#">Gear cage</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#"><span class="header__link_btn">Get template</span></a></li>
-                    </ul>
-                </nav>
+                <div class="header__content">
+                    <div class="header__logo"><img src="img/logo.svg" alt=""></div>
+                    <nav class="header__list">
+                        <ul>
+                            <li><a href="#">Business areas</a></li>
+                            <li><a href="#">Featured images</a></li>
+                            <li><a href="#">Gear cage</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#"><span class="header__link_btn">Get template</span></a></li>
+                        </ul>
+                    </nav>
 
-                <div class="header__burger">
-                    <span></span>
+                    <div class="header__burger">
+                        <span></span>
+                    </div>
                 </div>
             </div>
-        </div>
         </header>
 
         <div class="mainblock">
@@ -55,7 +55,7 @@
         <div class="areas">
             <div class="container">
                 <div class="areas__title title">What we do.</div>
-                <div class="areas__subtitle gray">The areas that we're specialized in.</div>
+                <div class="areas__subtitle  subtitle gray">The areas that we're specialized in.</div>
 
                 <div class="areas__grid">
 
@@ -98,7 +98,7 @@
 
             </div>
         </div>
-<!--
+
         <div class="mountain">
             <div class="text-move">
                 <div class="text-move__position">
@@ -120,30 +120,28 @@
         </div>
 
         <div class="tools">
-            <div class="tools__leftPart">
-                <div class="tools__leftPart__subtitle uppercase gray">The Gear cage</div>
-                <div class="tools__leftPart__title">The tools that we use.</div>
-                <div class="tools__leftPart__text">
+            <div class="tools__left">
+                <div class="tools__subtitle uppercase gray">The Gear cage</div>
+                <div class="tools__title">The tools that we use.</div>
+                <div class="tools__text">
                     <p>The say that "no place is boring if you've had a good night's sleep and have a pocket full of
                         unexposed film". While we don't shoot (a lot) of film these days — these are the tools that we
                         actually use everyday to capture the amazing things around us.</p>
                 </div>
                 <div class="whiteBtn"><span>Check it out</span></div>
             </div>
+            <div class="tools__right"></div>
 
-            <div class="tools__rightPart">
-
-                <div class="infoLine">
-                    <div class="infoLine__content">
-                        <img src="img/info4.svg" alt=""><span class="infoLine__item">0,8"</span>
-                        <img src="img/info3.svg" alt=""><span class="infoLine__item">f/5,6</span>
-                        <img src="img/info2.svg" alt=""><span class="infoLine__item">100</span>
-                        <img src="img/info1.svg" alt=""><span class="infoLine__item">Sweden</span>
-                    </div>
+            <div class="infoLine absolute">
+                <div class="infoLine__content">
+                    <img src="img/info4.svg" alt=""><span class="infoLine__item">0,8"</span>
+                    <img src="img/info3.svg" alt=""><span class="infoLine__item">f/5,6</span>
+                    <img src="img/info2.svg" alt=""><span class="infoLine__item">100</span>
+                    <img src="img/info1.svg" alt=""><span class="infoLine__item">Sweden</span>
                 </div>
             </div>
-        </div>
 
+        </div>
 
         <div class="monstera">
             <div class="text-move">
@@ -167,17 +165,16 @@
         <div class="clients">
             <div class="container">
                 <div class="clients__title title">Past clients</div>
-                <div class="clients__subtitle gray">Trusted by your favourite companies</div>
+                <div class="clients__subtitle gray subtitle">Trusted by your favourite companies</div>
                 <div class="clients__track">
-                    <div class="client__item"><img src="img/clients1.svg"></div>
-                    <div class="client__item"><img src="img/clients2.svg"></div>
-                    <div class="client__item"><img src="img/clients3.svg"></div>
-                    <div class="client__item"><img src="img/clients4.svg"></div>
-                    <div class="client__item"><img src="img/clients5.svg"></div>
+                    <div class="client__item"><img src="img/clients1.svg" alt=""></div>
+                    <div class="client__item"><img src="img/clients2.svg" alt=""></div>
+                    <div class="client__item"><img src="img/clients3.svg" alt=""></div>
+                    <div class="client__item"><img src="img/clients4.svg" alt=""></div>
+                    <div class="client__item"><img src="img/clients5.svg" alt=""></div>
                 </div>
             </div>
         </div>
-
 
         <div class="star">
             <div class="text-move">
@@ -201,11 +198,10 @@
         <div class="connection">
             <div class="container">
                 <div class="connection__title title">Need help with photography or videography?</div>
-                <div class="connection__subtitle gray">We're here for you!</div>
+                <div class="connection__subtitle subtitle gray">We're here for you!</div>
                 <div class="whiteBtn"><span>Get in touch</span></div>
             </div>
         </div>
-
 
         <footer>
             <div class="footer__grid">
@@ -242,9 +238,9 @@
 
                     <div class="footer__grid-rowTwo">
                         <div class="footer__newsletter">
-                        <div class="footer__newsletter-title uppercase">Subscribe to our newsletter</div>
-                        <div class="footer__newsletter-subtitle gray">Read about all the things we do.</div>
-                    </div>
+                            <div class="footer__newsletter-title uppercase">Subscribe to our newsletter</div>
+                            <div class="footer__newsletter-subtitle gray">Read about all the things we do.</div>
+                        </div>
                         <div class="whiteBtn bigBtn"><span></span></div>
                     </div>
                     <div class="footer__grid-rowThree">
@@ -258,7 +254,7 @@
 
                 </div>
             </div>
-        </footer>   -->
+        </footer>
     </div>
     <script src="index.js"></script>
 </body>
